--- a/다이내믹 프록시와 팩토리 빈.md
+++ b/다이내믹 프록시와 팩토리 빈.md
@@ -102,8 +102,112 @@
  
  
  
+ ### 다이내믹 프록시 적용 
+ 
+ 다이내믹 프록시는 프록시 팩토리에 의해 런타임 시 다이내믹하게 만들어지는 오브젝트이다.  
+ 
+ `다이나믹 프록시 오브젝트의 타입 = 타깃의 인터페이스` 
+
+ 프록시 팩토리에게 인터페이스 정보만 제공해주면 해당 인터페이스를 구현한 클래스의 오브젝트를 자동으로 만들어준다.
+ 
+ 부가기능 제공 코드는 직접 작성해야 하는데, 이는 프록시 오브젝트와 독립적으로 `InvocationHandler`를 구현한 오브젝트에 담는다. 
+ 
+ ```java
+
+ public interface InvocationHandler{
+    public Object invoke(Object proxy, Method method, Object[] args) throws Throwable;
+ }
+
+```
+ 
+ 다이내믹 프록시 오브젝트는 클라이언트의 모든 요청을 리플렉션 정보로 변환해서 `InvocationHandler` 구현 오브젝트의 `invoke()` 메소드로 넘기는 것이다.  
+ 
+ `InvocationHandler` 구현 오브젝트가 타깃 오브젝트 레퍼런스를 갖고 있다면 리플렉션을 이용해 간단히 위임 코드를 만들어 낼 수 있다.  
  
  
+ ### 다이내믹 프록시의 확장 
+ 
+ 구현한 `UppercaseHandler`의 모든 메소드의 리턴 타입이 스트링으로 가정되어 있다. 
+ 스트링 외의 리턴 타입을 갖는 메소드를 추가 시키기 위해 타깃 오브젝트의 메소드 호출 후 리턴 타입을 확인해서 스트링인 경우만 대문자로 바꿔주고 나머지는 그대로 넘겨주는 방식으로 수정하자.  
+   
+ 또한 타깃 종류에 상관없이도 적용이 가능 한 것이기 때문에, 리플렉션의 `Method`인터페이스를 이용해 타깃의 메소드를 호출하는 것이니까 `Hello`타입의 타깃으로 제한할 필요도 없다.  
+   
+   
+ ```java
+
+public class UppercaseHandler implements InvocationHandler {
+    Object target;
+
+    // Issue : 왜 private이 안되지?
+    public UppercaseHandler(Object target) {
+        this.target = target;
+    }
+
+    public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+        Object ret = method.invoke(target, args);
+        if(ret instanceof String && method.getName().startsWith("say")){
+            return ((String)ret).toUpperCase();
+        } else {
+            return ret;
+        }
+    }
+}
+
+```
+
+   
+ ## 다이내믹 프록시를 이용한 트랜잭션 부가기능 
+ 
+ `UserServiceTx`를 다이내믹 프록시 방식으로 변경해보자. 
+ 
+ 현재 
+ 1. 서비스 인터페이스의 메소드를 모두 구현해야 하고
+ 2. 트랜잭션이 필요한 메소드마다 트랜잭션 처리 코드가 중복 
+ 
+ 따라서 트랜잭션 부가기능을 제공하는 다이나믹 프록시를 만들어 적용해보자.  
+ 
+ ### 트랜잭션 `InvocationHandler`
+ 
+ 
+   
+   
+
+ 
+ 
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
  
  
  
