--- a/다이내믹 프록시와 팩토리 빈.md
+++ b/다이내믹 프록시와 팩토리 빈.md
@@ -168,8 +168,89 @@ public class UppercaseHandler implements InvocationHandler {
  
  ### 트랜잭션 `InvocationHandler`
  
+ 요청을 위임할 타깃을 DI로 제공받도록 한다. 따라서 `UserServiceImpl` 외에 트랜잭션 적용이 필요한 어떤 타깃 오브젝트에도 적용할 수 있다. 
  
-   
+ ## 다이내믹 프록시를 위한 팩토리 빈 
+ 
+ 이제 `TransactionHandler`와 다이내믹 프록시를 스프링의 DI를 통해 사용할 수 있도록 만들어보자.
+  
+ 문제는 DI의 대상이 되는 다이내믹 프록시 오브젝트는 일반적인 스프링의 빈으로 등록할 방법이 없다. 
+ 
+ 스프링은 내부적으로 리플렉션 API를 이용해서 빈 정의에 나오는 클래스 이름을 가지고 빈 오브젝트를 생성한다. 
+ 하지만 다이내믹 프록시 오브젝트는 이런 식으로 프록시 오브젝트가 생성되지 않는다. 
+  클래스 자체도 내부적으로 다이내믹하게 새로 정의해서 사용하기 때문에 다이내믹 오브젝트 클래스가 어떤 것인지 알 수도 없다. 
+  
+  
+ ### 팩토리 빈 
+ 
+ 사실 스프링은 클래스 정보를 가지고 디폴트 생성자를 통해 오브젝트를 만드는 방법 외에도 빈을 만들 수 있는 여러 가지 방법을 제공한다. 
+ 
+ 대표적인 방법이 팩토리 빈을 이용한 빈 생성 방법이다. 
+ 
+ **팩토리빈 ?** 스프링을 대신해서 오브젝트의 생성로직을 담당하도록 만들어진 특별한 빈 
+ 간단히, 스프링의 `FactoryBean`이라는 인터페이스를 구현한 클래스를 스프링의 빈으로 등록하면 팩토리 빈으로 동작한다. 
+ 
+ 사실 스프링은 `private` 생성자를 가진 클래스도 빈으로 등록해주면 **리플렉션**을 이용해 오브젝트를 만들어준다. 
+ (리플렉션은 `private`으로 선언된 접근 규약을 위반할 수 있는 기능이 있음)
+ 
+ 하지만 생성자를 `private`으로 만들었다는 것은 스태틱 메소드를 통해 오브젝트가 만들어져야 하는 중요한 이유가 있기 때문이므로 이를 무시하고 오브젝트를 강제로 생성하면 위험하다. 
+ 그러므로 일반적으로 `private` 생성자를 가진 클래스를 빈으로 등록하는 일은 권장되지 않는다. 
+ 
+ **팩토리 빈**은 전형적인 팩토리 메소드를 가진 오브젝트다. 스프링은 `FactoryBean`인터페이스를 구현한 클래스가 빈의 클래스로 정의되면, 팩토리 빈 클래스의 오브젝트 `getObject()`메소드를 이용해 오브젝트를 가져오고 이를 빈 오브젝트로 사용한다.  
+ 
+ 
+ ### 팩토리 빈의 설정방법
+ 
+ ```java
+
+     <bean id="message" class="spring.toby1.learningtest.factorybean.MessageFactoryBean">
+         <property name="text" value="Factory Bean"/>
+     </bean>
+```
+
+`MessageFactoryBean`의 `getObject()` 메소드가 생성해주는 오브젝트가 message빈의 오브젝트가 된다. 
+
+결국, `FactoryBean` 인터페이스를 구현한 클래스를 스프링 빈으로 만들어두면 `getObject()`라는 메소드가 생성해주는 오브젝트가 실제 빈의 오브젝트로 대치된다.  
+
+
+### 다이내믹 프록시를 만들어주는 팩토리 빈 
+
+`Proxy`의 `newProxyInstance()` 메소드를 통해서만 생성이 가능한 다이내믹 프록시 오브젝트는 일반적인 방법으로는 스프링의 빈으로 등록할 수 없다. 대신 팩토리 빈을 사용하면 다이내믹 프록시 오브젝트를 스프링의 빈으로 만들어 줄 수가 있다.  
+ 팩토리 빈의 `getObejct()` 메소드에 다이내믹 프록시 오브젝트를 만들어주는 코드를 넣으면 되기 때문이다.  
+ 
+
+### 트랜잭션 프록시 팩토리 빈 테스
+
+`TxProxyFactoryBean`의 트랜잭션을 지원하는 프록시를 바르게 만들어주는지를 확인하는 게 목적이므로 빈으로 등록된 `TxProxyFactoryBean`을 직접 가져와서 프록시를 만들어보면 된다. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
    
 
  
