--- a/다이내믹 프록시와 팩토리 빈.md
+++ b/다이내믹 프록시와 팩토리 빈.md
@@ -224,8 +224,28 @@ public class UppercaseHandler implements InvocationHandler {
 `TxProxyFactoryBean`의 트랜잭션을 지원하는 프록시를 바르게 만들어주는지를 확인하는 게 목적이므로 빈으로 등록된 `TxProxyFactoryBean`을 직접 가져와서 프록시를 만들어보면 된다. 
 
 
+## 프록시 팩토리 빈 방식의 장점과 한계
+
+다이내믹 프록시를 생성해주는 팩토리 빈을 사용하는 방법은 한번 부가기능을 가진 프록시를 생성하는 팩토리 빈을 만들어두면 타깃의 타입에 상관없이 재사용할 수 있다.  
+
+### 프록시 팩토리 빈의 재사용 
+타깃 오브젝트에 맞는 프로퍼티 정보를 설정해서 빈으로 등록해주기만 하면 되기 때문에, 코드 수정 없이도 다양한 클래스에 적용할 수 있다.  
+
+### 프록시 팩토리 빈 방식의 장점  
+
+앞의 데코레이터 패턴이 적용된 프록시를 사용 했을 때의 문제점을 프록피 팩토리 빈은 해결해준다.   
+
+1. 프록시를 적용할 대상이 구현하고 있는 인터페이스를 구현하는 프록시 클래스를 일일이 만들어야 하는 점.  
+2. 부가적인 기능이 여러 메소드에 반복적으로 나타나게 돼서 코드 중복의 문제가 발생하는 점 >> 핸들러 메소드 구현  
+
+### 프록시 팩토리 빈의 한계  
+
+한 번에 여러 개의 클래스에 공통적인 부가기능을 제공하는 일은 불가능하다. 비슷한 프록시 팩토리 빈의 설정이 중복되는 것을 막을 수 없다.  
+또한 하나의 타깃에 여러 개의 부가기능을 적용하려 할 때도 문제가 나타난다.  
+그리고 `TransactionHandler` 오브젝트가 프록시 팩토리 빈 개수만큼 만들어진다.  
 
 
+스프링은 이 문제점을 또 해결해 줄 수 있는 가능성을 가지고 있지 않은가~  
 
 
 
