--- a/다이내믹 프록시와 팩토리 빈.md
+++ b/다이내믹 프록시와 팩토리 빈.md
@@ -219,7 +219,7 @@ public class UppercaseHandler implements InvocationHandler {
  팩토리 빈의 `getObejct()` 메소드에 다이내믹 프록시 오브젝트를 만들어주는 코드를 넣으면 되기 때문이다.  
  
 
-### 트랜잭션 프록시 팩토리 빈 테스
+### 트랜잭션 프록시 팩토리 빈 테스트
 
 `TxProxyFactoryBean`의 트랜잭션을 지원하는 프록시를 바르게 만들어주는지를 확인하는 게 목적이므로 빈으로 등록된 `TxProxyFactoryBean`을 직접 가져와서 프록시를 만들어보면 된다. 
 
